# mx8-media

./: .gitignore  Cargo.toml
THE-REAL-WEBSITE-V2/: package-lock.json
THE-REAL-WEBSITE-V2/src/app/: globals.css  layout.tsx  page.tsx
THE-REAL-WEBSITE-V2/src/components/: site-header.tsx
api/: auth.py  find_access.py  find_contracts.py  find_dispatcher.py  finder.py  launcher.py  main.py  models.py  scaler.py  storage.py
api/routers/: jobs.py  webhooks.py
api/tests/: test_auth.py  test_find_access.py  test_find_dispatcher.py  test_finder.py  test_job_api.py
crates/mx8-coordinator/: Cargo.toml
crates/mx8-coordinator/src/: main.rs
crates/mx8-core/src/: types.rs
crates/mx8-core/tests/: manifest_record.rs
crates/mx8-find-media/src/: lib.rs
crates/mx8-proto/proto/: mx8.proto
crates/mx8-runtime/src/: pipeline.rs
crates/mx8-snapshot/src/: lib.rs  pack_dir.rs  pack_s3.rs  video_stage1.rs
crates/mx8-wire/src/: lib.rs
crates/mx8d-agent/: Cargo.toml
crates/mx8d-agent/src/: main.rs
docs/: ARCHITECTURE.md  api_shape.md  design_partner_onboarding.md  find_modal_deploy.md  find_v1.md  live_validation_checklist.md  support_matrix.md  v0_spec.md
inference/: modal_find_worker.py  pyproject.toml
inference/tests/: test_modal_find_worker.py
mintlify-docs/: README.md  api.mdx  docs.json  index.mdx  onboarding.mdx  quickstart.mdx  support.mdx  transforms.mdx
scripts/: deploy_find_worker.sh  live_validation_runner.py  modal_cpu_transcode_bench.py  modal_nvenc_bench.py  modal_workspace_probe.py  remove_background.py
sdk/: README.md  pyproject.toml
sdk/mx8/: __init__.py  cli.py  client.py  job.py
sdk/mx8/transforms/: __init__.py  audio.py  image.py  pipeline.py  video.py
sdk/tests/: test_cli.py
(+2 files in other folders)
