[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mx8-find-inference"
version = "0.1.0"
description = "MX8 Modal-backed inference worker"
requires-python = ">=3.10"
dependencies = [
    "modal>=1.1,<2.0",
    "pillow>=10,<12",
    "safetensors>=0.4,<1.0",
    "torch>=2.7,<3.0",
    "transformers>=4.57,<5.0",
]

[tool.setuptools]
packages = []
