[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mx8"
version = "2.0.0"
description = "MX8 media SDK"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Ekom2004/mx8-media"
Repository = "https://github.com/Ekom2004/mx8-media"

[project.scripts]
mx8 = "mx8.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mx8*"]
