[package]
name = "mx8d-agent"
version = "1.0.5"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-sdk-s3 = { workspace = true, optional = true }
clap.workspace = true
image.workspace = true
rawler = "0.7.2"
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webp-rust.workspace = true

mx8-observe = { path = "../mx8-observe" }
mx8-core = { path = "../mx8-core" }
mx8-proto = { path = "../mx8-proto" }
mx8-runtime = { path = "../mx8-runtime" }
mx8-wire = { path = "../mx8-wire" }

[features]
default = []
s3 = ["dep:aws-sdk-s3", "mx8-runtime/s3"]

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
